# multi-branch-approach-to-misinformation-detection

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml
app/: Home.py  utils.py
app/pages/: How_To_Guide.py
app_dev/: Home.py
app_dev/pages/: 1_Ablation_Analysis.py  2_Dataset_Analysis.py  2_Sample_Analysis.py
conf/: config.yaml
corpus_truth_manipulation/: __init__.py  config.py  dataset.py
hpc/: build_dbpedia_graphs.slurm  build_train_val_sets.slurm  check_overlap.slurm  fuse_graph_datasets.slurm  process_cosmos_xfacta.slurm  split_cosmos_dataset.slurm  split_mmfakebench_reorganisation_dataset.slurm  test_ablation.slurm  test_global.slurm  test_mmmd_optuna.slurm  train_ablation.slurm  train_encyclopedia_optuna.slurm  train_global_optuna.slurm
notebooks/: data_exploration.ipynb  text_to_graph.ipynb
reports/: extract_and_convert.py
reports/test/: COSMOS_claimreal.csv  COSMOS_imgreal.csv  COSMOS_mismatch.csv  COSMOS_neuron4_stratified.csv  COSMOS_neuron4_trainedMMFB.csv  COSMOS_overall.csv  MMFAKEBENCHSTRAT_neuron4_trainedMMFBSTRAT.csv  MMFAKEBENCH_claimreal.csv  MMFAKEBENCH_imgreal.csv  MMFAKEBENCH_mismatch.csv  MMFAKEBENCH_neuron4_trainedMMFB.csv  MMFB_claimreal.csv  MMFB_overall.csv  ablation_2025-10-25-11-23_data.csv
src/: dbpedia_build_graph.py  demo_EGMMG.py  graph_to_pyg_object.py  models.py  test_mmmd.py  test_mmmd_optuna.py  text_to_graph.py  train.py  train_encyclopedia.py  train_encyclopedia_optuna.py  train_mmmd.py
src/data/: build_dbpedia_database.py  create_stratified_split.py  (+8 more)
tests/: check_dataset_overlap.py
(+825 files in other folders)
